# stoatix

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/scripts/: download-baseline.sh
.github/workflows/: stoatix-baseline.yml  stoatix-gate.yml
ci/: stoatix.ci.yml
examples/: stoatix.yaml
src/stoatix/: __init__.py  cli.py  compare.py  config.py  perfstat.py  plan.py  profile_select.py  profiling.py  report.py  results.py  runner.py  summarize.py  sysinfo.py
tests/: test_compare.py  test_config_validation.py  test_matrix_expansion.py  test_perfstat_parse.py  test_profile_selection.py  test_report.py  test_report_profile_links.py  test_runner.py  test_runner_perf_fallback.py  test_smoke.py  test_summarize.py
